--- a/app/views/companies/contratos.html.erb
+++ b/app/views/companies/contratos.html.erb
@@ -38,12 +38,15 @@
 
 <div class="mid_box">
   <h3>
+  <%= image_tag("reports_32.png", :class => "vmiddle") %>
+    <%= link_to "Reportes", "/companies/reports/reports_contratos/#{@company.id}" %>
+
   </h3>
 
   <p>
-    Tipo de cambio sunat
+    Reportes
 
-
+    
   </p>
 
 
