--- a/app/views/contratos/_form.html.erb
+++ b/app/views/contratos/_form.html.erb
@@ -1,3 +1,19 @@
+<% if @contrato.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@contrato.errors.count, "error") %> prohibited this orden from being saved:</h2>
+
+    <ul>
+    <% @contrato.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<%= hr() %>
+
+
+
 <%= simple_form_for(@contrato) do |f| %>
   <%= f.error_notification %>
 
