--- a/app/views/avisodetails/show.html.erb
+++ b/app/views/avisodetails/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Descrip:</strong>
+  <strong>Descripcion:</strong>
   <%= @avisodetail.descrip %>
 </p>
 
 <p>
-  <strong>Comments:</strong>
+  <strong>Comentario :</strong>
   <%= @avisodetail.comments %>
 </p>
 
-<%= link_to 'Edit', edit_avisodetail_path(@avisodetail) %> |
-<%= link_to 'Back', avisodetails_path %>
+<%= link_to 'Editar', edit_avisodetail_path(@avisodetail) %> |
+<%= link_to 'Regresar', avisodetails_path %>
