--- a/app/views/avisodetails/index.html.erb
+++ b/app/views/avisodetails/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Avisodetails</h1>
+<h1>Listado Programas / Elemento </h1>
 
 <table>
   <thead>
     <tr>
-      <th>Descrip</th>
-      <th>Comments</th>
+      <th>Descripcion</th>
+      <th>Comentario </th>
       <th colspan="3"></th>
     </tr>
   </thead>
