--- a/app/views/ordens/index.html.erb
+++ b/app/views/ordens/index.html.erb
@@ -1,43 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div class="breadcrumbs">
+  <%= link_to "My companies", "/companies" %>
+</div>
 
-<h1>Ordenes</h1>
+<h1>
+  <%= image_tag("invoice_48.png", :class => "vmiddle") %>
+  ordens
+</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Orden</th>
-      <th>Contrato</th>
-      <th>Fecha</th>
-      <th>Medio</th>
-      <th>Marca</th>
-      <th>Version</th>
-      <th>Fecha1</th>
-      <th>Fecha2</th>
-      <th>Tiempo</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<p>
+  Select one of your companies to view its ordens:
+</p>
 
-  <tbody>
-    <% @ordens.each do |orden| %>
-      <tr>
-        <td><%= orden.code %></td>
-        <td><%= orden.contrato.code %></td>
-        <td><%= orden.fecha.strftime("%d/%m/%Y") %></td>
-        <td><%= orden.medio.descrip %></td>
-        <td><%= orden.marca.descrip %></td>
-        <td><%= orden.version.descrip %></td>
-        <td><%= orden.fecha1.strftime("%d/%m/%Y") %></td>
-        <td><%= orden.fecha2.strftime("%d/%m/%Y") %></td>
-        <td><%= orden.tiempo %></td>
-        <td><%= link_to 'Ver', orden %></td>
-        <td><%= link_to 'Editar', edit_orden_path(orden) %></td>
-        <td><%= link_to 'Eliminar', orden, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'Nueva Orden', new_orden_path %>
+<%= render "companies/list_select" %>
