--- a/app/views/ordens/new.html.erb
+++ b/app/views/ordens/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New Orden</h1>
+<div class="breadcrumbs">
+  <%= link_to "My companies", "/companies" %> &raquo;
+  <%= link_to @company.name, @company %> &raquo;
+  <%= link_to "ordens", "/companies/ordens/#{@company.id}" %>
+</div>
+
+<h1>
+  <%= image_tag("invoice_48.png", :class => "vmiddle") %>
+  Nueva Orden
+</h1>
+
+<p>
+  Para crear una nueva orden, por favor llenar el siguiente formulario. Los campos marcados con <strong>*</strong> son obligatorios
+  
+</p>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', ordens_path %>
+<%= hr() %>
+
+<div class="button">
+  <%= link_to 'Back', "/companies/ordens/#{@company.id}" %>
+</div>
