--- a/app/views/contratos/_form.html.erb
+++ b/app/views/contratos/_form.html.erb
@@ -95,8 +95,15 @@
     <%= f.text_field :comision2  %>
     </div>
     
-
-
+    <div class="field">
+    <%= f.label :codigointerno,"Codigo Interno :  " %><br />
+    <%= f.text_field :codigointerno  %>
+    </div>
+    <div class="field">
+    <%= f.label :description,"Descripcion :  " %><br />
+    <%= f.text_field :description  %>
+    </div>
+        
   </div>
 
   <div class="form-actions">
