--- a/app/views/deliveries/_list.html.erb
+++ b/app/views/deliveries/_list.html.erb
@@ -1,3 +1,5 @@
+
+<%=  form_tag discontinue_deliveries_path,method: :put  %>
 <% if @deliveries.count > 0 %>
   <table>
     <thead>
@@ -38,6 +40,8 @@
     
       <% for delivery in @deliveries %>          
         <tr>
+          
+
           <td class="bordered_right bordered_bottom">
             <%= delivery.code %>
           </td>
@@ -55,20 +59,23 @@
             <%= money(delivery.total) %>
           </td>
           <td class="bordered_right bordered_bottom">
-            <%= doDate(delivery.created_at) %>
+            <%= delivery.created_at.strftime("%d%m%Y") %>
           </td>
 
           <td class="bordered_right bordered_bottom right">
             <% if delivery.tranportorder  %>
-
             <%= delivery.tranportorder.code  %>          
-
             <% end %>
           </td>
-          
+          <td class="bordered_right bordered_bottom right">
+            <%= check_box_tag "products_ids[]", delivery.id     %>
+          </td>          
+
           <td class="bordered_right bordered_bottom <%= delivery.processed_color %>">
             <%= delivery.get_processed_short %>
           </td>
+
+          
           <td class="bordered_right bordered_bottom">
           
           <%= link_to "Ver",delivery %>                        
@@ -93,8 +100,13 @@
       <% end %>
     </tbody>
   </table>
+<%=  submit_tag "Fecha Operaciones "%>
+
 <% else %>
   <p class="error">
     We couldn't find any deliveries.
   </p>
+<% end %>
+
+
 <% end %>
