--- a/app/views/tipoavisos/index.html.erb
+++ b/app/views/tipoavisos/index.html.erb
@@ -32,7 +32,7 @@
 
 <h2>Importar Archivo clientes "*.csv"</h2>
 
-<%= form_tag import_customers_path, multipart: true do %>
+<%= form_tag import_tipoavisos_path, multipart: true do %>
   <%= file_field_tag :file %>
   <%= submit_tag "Importar " %>
 <% end %>
