--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -21,11 +21,10 @@
        Informacion Orden 
     </h3>
 
-<div class="field">
+    <div class="field">
       <%= f.label :code, "Code*", :class => "bold" %><br />
       <%= f.text_field :code  %>
     </div>
-
 
     <div class="field">
     
@@ -72,8 +71,13 @@
       <%= f.label :tiempo, "Duracion*", :class => "bold"   %><br />
       <%= f.text_field :tiempo  %>
     </div>
-  
-  
+    <div class="field">
+      <%= select_tag(:year, options_for_select(@years, @year)) %>
+    </div>
+    <div class="field">
+      <%= select_tag(:month, options_for_select(@months, @month)) %>
+    </div>
+
     <%= hr() %>
 
   
