--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -31,10 +31,15 @@
   <%= @orden.marca.descrip %>
 </p>
 
+
+
 <b>Version:</b>
   <%= @orden.version.descrip %>
 </p>
 
+<b>Unidad de medida:</b>
+  <%= @orden.tiempo %>
+</p>
 
 <%= hr() %>
 
@@ -59,57 +64,235 @@
   <thead>
     <tr>
       <th>
-        Producto
+        Descripcion/Programa 
       </th>
       <th>
-        Fecha 
+        1
       </th>
       
       <th>
-        Precio
+        2
       </th>
       <th>
-        Cantidad
+        3
+      </th>
+      <th>
+        4
+      </th>
+      <th>
+        5
+      </th>
+      <th>
+        6
+      </th>
+      <th>
+        7
+      </th>
+      <th>
+        8
+      </th>
+      <th>
+        9
+      </th>
+      
+      <th>
+        10
+      </th>
+      <th>
+        11
+      </th>
+      <th>
+        12
+      </th>
+      <th>
+        13
+      </th>
+      <th>
+        14
+      </th>
+      
+      <th>
+        15
+      </th>
+      <th>
+        16
+      </th>
+      <th>
+        17
+      </th>
+      <th>
+        18
+      </th>
+      <th>
+        19
+      </th>
+      <th>
+        20
+      </th>
+      
+      <th>
+        21
+      </th>
+      <th>
+        22
+      </th>
+      <th>
+        23
+      </th>
+      <th>
+        24
+      </th>
+      <th>
+        25
+      </th>
+      <th>
+        26
+      </th>
+      
+      <th>
+        27
+      </th>
+      <th>
+        28
+      </th>
+      <th>
+        29
+      </th>
+      <th>
+        30
+      </th>
+      <th>
+        31
       </th>
       <th>
         Tarifa
       </th>
       <th>
-        Total
+        Costo
+      </th>
+      <th>
+        Importe
       </th>
     </tr>
   </thead>
   <tbody>
-    <% for productItem in @orden.get_products() %>
-      <tr>
-        <td class="bordered_bottom bordered_right">
-          <%= link_to productItem.name   %>
-        </td>
-        <td class="bordered_bottom bordered_right">
-          <%= productItem.fecha.strftime("%d/%m/%Y") %>
-        </td>
-        
-        <td class="bordered_bottom bordered_right">
-          <%= money(productItem.price) %>
-        </td>
-        <td class="bordered_bottom bordered_right">
-          <%= productItem.quantity %>
-        </td>
-        <td class="bordered_bottom bordered_right">
-          <%= money(productItem.tarifa) %>
-        </td>
-        <td class="bordered_bottom bordered_right">
-          <%= money(productItem.total) %>
-        </td>
-      </tr>
+    <% for product in @orden.get_products() %>
+    
+          <td class="small bordered_bottom bordered_right">
+            <%= product.avisodetail.descrip %>    
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d01 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d02 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d03 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d04 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d05 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d06 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d07 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d08 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d09 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d10 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d11 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d12 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d13 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d14 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d15 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d16 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d17 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d18 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d19 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d20 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d21 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d22 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d23 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d24 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d25 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d26 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d27 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d28 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d29 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d30 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= product.d31 %>              
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= money(product.tarifa) %>
+          </td>
+          
+          <td class="small bordered_bottom bordered_right">
+            <%= money(product.price) %>
+          </td>
+          <td class="small bordered_bottom bordered_right">
+            <%= money(product.total) %>
+          </td>
+
     <% end %>
     <tr>
-      <td colspan="6" class="bordered_bottom bordered_right">
+      <td colspan="35" class="bordered_bottom bordered_right">
         &nbsp;
       </td>
     </tr>
     <tr>
-      <td colspan="5" class="bordered_bottom bordered_right bold">
+      <td colspan="34" class="bordered_bottom bordered_right bold">
         Subtotal:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -117,7 +300,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="5" class="bordered_bottom bordered_right bold">
+      <td colspan="34" class="bordered_bottom bordered_right bold">
         IGV:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -125,7 +308,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="5" class="bordered_bottom bordered_right bold">
+      <td colspan="34" class="bordered_bottom bordered_right bold">
         Total:
       </td>
       <td class="bordered_bottom bordered_right bold right">
@@ -167,8 +350,6 @@
 
 <div class="button">
   <%= link_to 'Export to PDF', "/ordens/pdf/#{@orden.id} " %>
-
-  
   <%= link_to 'Send orden via email', "/ordens/email/#{@orden.id}" %>
   <%= link_to 'Process orden', "/ordens/do_process/#{@orden.id}" %>
   <%= link_to 'Edit', edit_orden_path(@orden) %>
